## Process this file with automake to produce Makefile.in

pkginclude_HEADERS = \
        FX4Splitter.h        \
        FXAccelTable.h       \
        FXApp.h              \
        FXArray.h            \
        FXArrowButton.h      \
        FXBMPIcon.h          \
        FXBMPImage.h         \
        FXBitmap.h           \
        FXButton.h           \
        FXCanvas.h           \
        FXCharset.h          \
        FXCheckButton.h      \
        FXColorDialog.h      \
        FXColorSelector.h    \
        FXColorWell.h        \
        FXComboBox.h         \
        FXComposite.h        \
        FXCursor.h           \
        FXDC.h               \
        FXDCPrint.h          \
        FXDCWindow.h         \
        FXDHMat.h            \
        FXDHVec.h            \
        FXDQuat.h            \
        FXDVec.h             \
        FXDataTarget.h       \
        FXDebugTarget.h      \
        FXDelegator.h        \
        FXDial.h             \
        FXDialogBox.h        \
        FXDict.h             \
        FXDirBox.h           \
        FXDirDialog.h        \
        FXDirList.h          \
        FXDirSelector.h      \
        FXDocument.h         \
        FXDragCorner.h       \
        FXDrawable.h         \
        FXDriveBox.h         \
        FXElement.h          \
        FXFile.h             \
        FXFileDialog.h       \
        FXFileDict.h         \
        FXFileList.h         \
        FXFileSelector.h     \
        FXFont.h             \
        FXFontDialog.h       \
        FXFontSelector.h     \
        FXFrame.h            \
        FXGIFCursor.h        \
        FXGIFIcon.h          \
        FXGIFImage.h         \
        FXGLCanvas.h         \
        FXGLCone.h           \
        FXGLContext.h        \
        FXGLCube.h           \
        FXGLCylinder.h       \
        FXGLObject.h         \
        FXGLShape.h          \
        FXGLSphere.h         \
        FXGLTriangleMesh.h   \
        FXGLViewer.h         \
        FXGLVisual.h         \
        FXGroupBox.h         \
        FXHMat.h             \
        FXHVec.h             \
        FXHeader.h           \
        FXHorizontalFrame.h  \
        FXIcon.h             \
        FXIconList.h         \
        FXId.h               \
        FXImage.h            \
        FXImageView.h        \
        FXJPEGIcon.h         \
        FXJPEGImage.h        \
        FXLabel.h            \
        FXList.h             \
        FXListBox.h          \
        FXMDIButton.h        \
        FXMDIChild.h         \
        FXMDIClient.h        \
        FXMainWindow.h       \
        FXMatrix.h           \
        FXMenubar.h          \
        FXMenuButton.h       \
        FXMenuCaption.h      \
        FXMenuCascade.h      \
        FXMenuCommand.h      \
        FXMenuPane.h         \
        FXMenuSeparator.h    \
        FXMenuTitle.h        \
        FXMessageBox.h       \
        FXObject.h           \
        FXObjectList.h       \
        FXOptionMenu.h       \
        FXPNGIcon.h          \
        FXPNGImage.h         \
        FXPacker.h           \
        FXPopup.h            \
        FXPrintDialog.h      \
        FXProfiler.h         \
        FXProgressBar.h      \
        FXQuat.h             \
        FXRadioButton.h      \
        FXRange.h            \
        FXRegion.h           \
        FXRegistry.h         \
        FXReplaceDialog.h    \
        FXRecentFiles.h      \
        FXRootWindow.h       \
        FXScrollArea.h       \
        FXScrollWindow.h     \
        FXScrollbar.h        \
        FXSearchDialog.h     \
        FXSeparator.h        \
        FXShell.h            \
        FXShutter.h          \
        FXSlider.h           \
        FXSpinner.h          \
        FXSplitter.h         \
        FXStatusbar.h        \
        FXStatusline.h       \
        FXStream.h           \
        FXString.h           \
        FXSwitcher.h         \
        FXTab.h              \
        FXTable.h            \
        FXText.h             \
        FXTextField.h        \
        FXToggleButton.h     \
        FXToolbar.h          \
        FXToolbarGrip.h      \
        FXToolbarShell.h     \
        FXToolbarTab.h       \
        FXTooltip.h          \
        FXTopWindow.h        \
        FXTreeList.h         \
        FXTreeListBox.h      \
        FXUndoList.h         \
        FXURL.h              \
        FXVec.h              \
        FXVerticalFrame.h    \
        FXVisual.h           \
        FXWindow.h           \
        FXXPMIcon.h          \
        FXXPMImage.h         \
        fx.h                 \
        fx3d.h               \
        fxdefs.h             \
        fxkeys.h             \
        fxregex.h            \
        fxver.h              \
        xincs.h
